--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "router": "^1.3.8",
     "web-vitals": "^2.1.4"
   },
