--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "router": "^1.3.8",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
